JumpScript/tests/baselines/reference/parserIndexSignature2.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature2.jump(2,4): error TS2369: A parameter property is only allowed in a constructor implementation.
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature2.jump(2,11): error TS1018: An index signature parameter cannot have an accessibility modifier.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature2.jump (2 errors) ====
    interface I {
      [public a]
       ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
              ~
!!! error TS1018: An index signature parameter cannot have an accessibility modifier.
    }